--- a/index.html
+++ b/index.html
@@ -60,81 +60,42 @@
                     <a href="https://adryanszencz.github.io/Projetos/" class="display-3 text-decoration-none text-white">Projects</a>
                     <a href="#contact" class=" text-white pt-5 border border-0 border-bottom text-decoration-none ">CONTACT ME</a>
                 </div>
-                <div class="row row-cols-1 row-cols-md-2 g-4 ">
+                <div class="row row-cols-1 row-cols-md-3 g-4 ">
                     <div class="col d-flex justify-content-center">
                         <div class="card bg-transparent border border-0 text-white mb-5" style="width: 20rem;">
-                            <img src="./asset/img/Captura de tela 2023-09-15 163621.png" class="card-img-top" alt="...">
+                            <img src="./asset/img/Captura asdfghjk.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h3 class="card-title text-start">Card title</h3>
                                 <p class="card-text  text-start">HTML,  CSS,  Javascript</p>
                                 <div class="d-flex justify-content-between align-content-center">
-                                    <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW PROJECT</a>
-                                    <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW CODE</a>
+                                    <a href="./projeto03/index.html" class="text-white border border-0 border-bottom text-decoration-none pt-2">VER PROJETO</a>
+                                    <a href="https://github.com/adryanszencz/Projetos/tree/main/projeto03" class="text-white border border-0 border-bottom text-decoration-none pt-2">VER CÓDIGO</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col d-flex justify-content-center">
                         <div class="card bg-transparent border border-0 text-white mb-5" style="width: 20rem;">
-                            <img src="./asset/img/Captura de tela 2023-09-15 163621.png" class="card-img-top" alt="...">
+                            <img src="./asset/img/Captura de tel.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h3 class="card-title text-start">Card title</h3>
                                 <p class="card-text  text-start">HTML,  CSS,  Javascript</p>
                                 <div class="d-flex justify-content-between align-content-center">
-                                    <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW PROJECT</a>
-                                    <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW CODE</a>
+                                    <a href="./projeto01/index.html" class="text-white border border-0 border-bottom text-decoration-none pt-2">VER PROJETO</a>
+                                    <a href="https://github.com/adryanszencz/Projetos/tree/main/projeto01" class="text-white border border-0 border-bottom text-decoration-none pt-2">VER CÓDIGO</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col d-flex justify-content-center">
                         <div class="card bg-transparent border border-0 text-white mb-5" style="width: 20rem;">
-                            <img src="./asset/img/Captura de tela 2023-09-15 163621.png" class="card-img-top" alt="...">
+                            <img src="./asset/img/Captura de tela 2023-09.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h3 class="card-title text-start">Card title</h3>
                                 <p class="card-text  text-start">HTML,  CSS,  Javascript</p>
                                 <div class="d-flex justify-content-between align-content-center">
-                                    <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW PROJECT</a>
-                                    <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW CODE</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col d-flex justify-content-center">
-                        <div class="card bg-transparent border border-0 text-white mb-5" style="width: 20rem;">
-                            <img src="./asset/img/Captura de tela 2023-09-15 163621.png" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h3 class="card-title text-start">Card title</h3>
-                                <p class="card-text  text-start">HTML,  CSS,  Javascript</p>
-                                <div class="d-flex justify-content-between align-content-center">
-                                    <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW PROJECT</a>
-                                    <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW CODE</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col d-flex justify-content-center">
-                        <div class="card bg-transparent border border-0 text-white mb-5" style="width: 20rem;">
-                            <img src="./asset/img/Captura de tela 2023-09-15 163621.png" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h3 class="card-title text-start">Card title</h3>
-                                <p class="card-text  text-start">HTML,  CSS,  Javascript</p>
-                                <div class="d-flex justify-content-between align-content-center">
-                                    <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW PROJECT</a>
-                                    <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW CODE</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col d-flex justify-content-center">
-                        <div class="card bg-transparent border border-0 text-white mb-5" style="width: 20rem;">
-                            <img src="./asset/img/Captura de tela 2023-09-15 163621.png" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h3 class="card-title text-start">Card title</h3>
-                                <p class="card-text  text-start">HTML,  CSS,  Javascript</p>
-                                <div class="d-flex justify-content-between align-content-center">
-                                    <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW PROJECT</a>
-                                    <a href="#" class="text-white border border-0 border-bottom text-decoration-none pt-2">VIEW CODE</a>
+                                    <a href="./projeto02/index.html" class="text-white border border-0 border-bottom text-decoration-none pt-2">VER PROJETO</a>
+                                    <a href="https://github.com/adryanszencz/Projetos/tree/main/projeto02" class="text-white border border-0 border-bottom text-decoration-none pt-2">VER CÓDIGO</a>
                                 </div>
                             </div>
                         </div>
