--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                             <img src="./asset/img/Captura de tela 2023-09-15 162054.png" alt="" style="width: 15rem;">
                         </div>
                         <div class="col-md-7">
-                            <h1 class="display-3">Nice to meet you! <br> I'm Adryan Szenczuk</h1>
-                            <p class="fs-6">Based in the UK, I'm a front-end developer passionate about building accessible web apps that users love.</p>
-                            <a href="#contact" class=" text-white border border-0 border-bottom text-decoration-none fs-5"> CONTACT ME</a>
+                            <h1 class="display-3">Meu nome é, <br> Adryan Szenczuk</h1>
+                            <p class="fs-6">Morando no Litoral do Parana, tenho 17 anos, estou começando nessa area de desenvolvimeto, gostaria de poder criar aplicativos web acessíveis que os usuários posam adoram.</p>
+                            <a href="#contact" class=" text-white border border-0 border-bottom text-decoration-none fs-5">ENTRE EM CONTATO </a>
                         </div>
                     </div>
                 </div>
@@ -40,32 +40,32 @@
                 <div class="row row-cols-1 row-cols-md-2 g-4 mt-3">
                     <div class="col">
                         <h1 class="display-3 fw-semibold">HTML</h1>
-                        <p class="fs-6">1 Years Experience</p>
+                        <p class="fs-6">Adquirindo conhecimento</p>
                     </div>
                     <div class="col">
                         <h1 class="display-3 fw-semibold ">CSS</h1>
-                        <p class="fs-6">1 Years Experience</p>
+                        <p class="fs-6">Adquirindo conhecimentoe</p>
                     </div>
                     <div class="col">
                         <h1 class="display-3 fw-semibold ">Javascript</h1>
-                        <p class="fs-6">1 Years Experience</p>
+                        <p class="fs-6">Adquirindo conhecimento</p>
                     </div>
                     <div class="col">
                         <h1 class="display-3 fw-semibold ">PHP</h1>
-                        <p class="fs-6 mb-5">1 Years Experience</p>
+                        <p class="fs-6 mb-5">Adquirindo conhecimento</p>
                     </div>
                 </div>
                 <hr>
                 <div class="d-flex justify-content-between my-5">
-                    <a href="https://adryanszencz.github.io/Projetos/" class="display-3 text-decoration-none text-white">Projects</a>
-                    <a href="#contact" class=" text-white pt-5 border border-0 border-bottom text-decoration-none ">CONTACT ME</a>
+                    <a href="https://adryanszencz.github.io/Projetos/" class="display-3 text-decoration-none text-white">Projetos</a>
+                    <a href="#contact" class=" text-white pt-5 border border-0 border-bottom text-decoration-none ">ENTRE EM CONTATO </a>
                 </div>
                 <div class="row row-cols-1 row-cols-md-3 g-4 ">
                     <div class="col d-flex justify-content-center">
                         <div class="card bg-transparent border border-0 text-white mb-5" style="width: 20rem;">
                             <img src="./asset/img/Captura asdfghjk.png" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h3 class="card-title text-start">Card title</h3>
+                                <h3 class="card-title text-start">Calculadora</h3>
                                 <p class="card-text  text-start">HTML,  CSS,  Javascript</p>
                                 <div class="d-flex justify-content-between align-content-center">
                                     <a href="./projeto03/index.html" class="text-white border border-0 border-bottom text-decoration-none pt-2">VER PROJETO</a>
@@ -78,8 +78,8 @@
                         <div class="card bg-transparent border border-0 text-white mb-5" style="width: 20rem;">
                             <img src="./asset/img/Captura de tel.png" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h3 class="card-title text-start">Card title</h3>
-                                <p class="card-text  text-start">HTML,  CSS,  Javascript</p>
+                                <h3 class="card-title text-start">Gráfico de despesas</h3>
+                                <p class="card-text  text-start">HTML,  CSS, Bootstrap</p>
                                 <div class="d-flex justify-content-between align-content-center">
                                     <a href="./projeto01/index.html" class="text-white border border-0 border-bottom text-decoration-none pt-2">VER PROJETO</a>
                                     <a href="https://github.com/adryanszencz/Projetos/tree/main/projeto01" class="text-white border border-0 border-bottom text-decoration-none pt-2">VER CÓDIGO</a>
@@ -91,8 +91,8 @@
                         <div class="card bg-transparent border border-0 text-white mb-5" style="width: 20rem;">
                             <img src="./asset/img/Captura de tela 2023-09.png" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h3 class="card-title text-start">Card title</h3>
-                                <p class="card-text  text-start">HTML,  CSS,  Javascript</p>
+                                <h3 class="card-title text-start">Calculadora de gorjetas</h3>
+                                <p class="card-text  text-start">HTML,  CSS</p>
                                 <div class="d-flex justify-content-between align-content-center">
                                     <a href="./projeto02/index.html" class="text-white border border-0 border-bottom text-decoration-none pt-2">VER PROJETO</a>
                                     <a href="https://github.com/adryanszencz/Projetos/tree/main/projeto02" class="text-white border border-0 border-bottom text-decoration-none pt-2">VER CÓDIGO</a>
@@ -111,7 +111,7 @@
                                     <img src="./asset/img/senac-logo-1.png" alt="">
                                 </div>
                                     <p class="text-center text" >Cursando Tec. Informatica <br> 
-                                        Senac - Caioba 10/12/2022 -10/12/2024</p>
+                                        Senac - Caioba 03/2022 - 03/2024</p>
                             </div>
                         </div>
                         <div class="col-sm d-flex align-items-center justify-content-center">
@@ -120,7 +120,7 @@
                                     <img src="./asset/img/estacio-logo3.png" alt="">
                                 </div>
                                 <p class="text-center text">Cursando Eng. Software<br> 
-                                    Estacio 10/12/2023 -10/12/2027</p>
+                                    Estacio 03/2023 - 03/2026</p>
                             </div>
                         </div>
                     </div>
@@ -132,8 +132,8 @@
         <div class="row row-cols-1 row-cols-md-2 g-4 ">
             <div class="col d-flex justify-content-center px-4">
                 <div class="flex-column text-center">
-                    <h1 class="display-3 mt-4">Contact</h1>
-                    <p>I would love to hear about your project and how i could help. Please fill in the form, and I'II get back to you as sonn as possible</p>
+                    <h1 class="display-3 mt-4">Contato</h1>
+                    <p>Eu adoraria ouvir sobre seu projeto e como posso ajudar. Por favor preencha o formulário e entrarei em contato com você o mais breve possível</p>
                 </div>
             </div>
             <div class="col d-flex justify-content-center">
@@ -147,7 +147,7 @@
                         <div class="input-group w-100 h-25" ><textarea type="text" id="message" name="message" required class="form-control text-white bg-transparent border border-0 border-bottom  fs-4" aria-label="With textarea" ></textarea></div>
                         <br>
                         <div class="d-flex justify-content-end">
-                            <button type="submit" class="text-white bg-transparent border border-0 border-bottom text-decoration-none pt-2">VIEW CODE</button>
+                            <button type="submit" class="text-white bg-transparent border border-0 border-bottom text-decoration-none pt-2">ENVIAR</button>
                         </div>
                 </div>
             </div>
