Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         </div>
                         <div class="col-md-7">
                             <h1 class="display-3">Meu nome é, <br> Adryan Szenczuk</h1>
-                            <p class="fs-6">Morando no Litoral do Parana, tenho 17 anos, estou começando nessa area de desenvolvimeto, gostaria de poder criar aplicativos web acessíveis que os usuários posam adoram.</p>
+                            <p class="fs-6">Atualmente moro em Matinhos , litoral do Paraná. Tenho 17 Anos e começando na área de desenvolvimento web, e estou ansioso por um desafio onde possa adquirir mais conhecimento, estou aberto a novas oportunidades.</p>
                             <a href="#contact" class=" text-white border border-0 border-bottom text-decoration-none fs-5">ENTRE EM CONTATO </a>
                         </div>
                     </div>
