--- a/index.html
+++ b/index.html
@@ -39,71 +39,37 @@
                 <hr>
                 <div class="row row-cols-1 row-cols-md-2 g-4 mt-3">
                     <div class="col">
-                        <h1 class="display-3 fw-semibold">HTML</h1>
+                        <h1 class="display-4 fw-semibold">HTML</h1>
                         <p class="fs-6">Adquirindo conhecimento</p>
                     </div>
                     <div class="col">
-                        <h1 class="display-3 fw-semibold ">CSS</h1>
+                        <h1 class="display-4 fw-semibold ">CSS</h1>
                         <p class="fs-6">Adquirindo conhecimentoe</p>
                     </div>
                     <div class="col">
-                        <h1 class="display-3 fw-semibold ">Javascript</h1>
+                        <h1 class="display-4 fw-semibold ">Javascript</h1>
                         <p class="fs-6">Adquirindo conhecimento</p>
                     </div>
                     <div class="col">
-                        <h1 class="display-3 fw-semibold ">PHP</h1>
+                        <h1 class="display-4 fw-semibold ">PHP</h1>
+                        <p class="fs-6 mb-5">Adquirindo conhecimento</p>
+                    </div>
+                    <div class="col">
+                        <h1 class="display-4 fw-semibold ">MySQl</h1>
+                        <p class="fs-6">Adquirindo conhecimento</p>
+                    </div>
+                    <div class="col">
+                        <h1 class="display-4 fw-semibold ">Bootstrap</h1>
+                        <p class="fs-6 mb-5">Adquirindo conhecimento</p>
+                    </div>
+                    <div class="col">
+                        <h1 class="display-4 fw-semibold ">Figma</h1>
                         <p class="fs-6 mb-5">Adquirindo conhecimento</p>
                     </div>
                 </div>
                 <hr>
-                <div class="d-flex justify-content-between my-5">
-                    <a href="https://adryanszencz.github.io/Projetos/" class="display-3 text-decoration-none text-white">Projetos</a>
-                    <a href="#contact" class=" text-white pt-5 border border-0 border-bottom text-decoration-none ">ENTRE EM CONTATO </a>
-                </div>
-                <div class="row row-cols-1 row-cols-md-3 g-4 ">
-                    <div class="col d-flex justify-content-center">
-                        <div class="card bg-transparent border border-0 text-white mb-5" style="width: 20rem;">
-                            <img src="./asset/img/Captura asdfghjk.png" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h3 class="card-title text-start">Calculadora</h3>
-                                <p class="card-text  text-start">HTML,  CSS,  Javascript</p>
-                                <div class="d-flex justify-content-between align-content-center">
-                                    <a href="./projeto03/index.html" class="text-white border border-0 border-bottom text-decoration-none pt-2">VER PROJETO</a>
-                                    <a href="https://github.com/adryanszencz/Projetos/tree/main/projeto03" class="text-white border border-0 border-bottom text-decoration-none pt-2">VER CÓDIGO</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col d-flex justify-content-center">
-                        <div class="card bg-transparent border border-0 text-white mb-5" style="width: 20rem;">
-                            <img src="./asset/img/Captura de tel.png" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h3 class="card-title text-start">Gráfico de despesas</h3>
-                                <p class="card-text  text-start">HTML,  CSS, Bootstrap</p>
-                                <div class="d-flex justify-content-between align-content-center">
-                                    <a href="./projeto01/index.html" class="text-white border border-0 border-bottom text-decoration-none pt-2">VER PROJETO</a>
-                                    <a href="https://github.com/adryanszencz/Projetos/tree/main/projeto01" class="text-white border border-0 border-bottom text-decoration-none pt-2">VER CÓDIGO</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col d-flex justify-content-center">
-                        <div class="card bg-transparent border border-0 text-white mb-5" style="width: 20rem;">
-                            <img src="./asset/img/Captura de tela 2023-09.png" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h3 class="card-title text-start">Calculadora de gorjetas</h3>
-                                <p class="card-text  text-start">HTML,  CSS</p>
-                                <div class="d-flex justify-content-between align-content-center">
-                                    <a href="./projeto02/index.html" class="text-white border border-0 border-bottom text-decoration-none pt-2">VER PROJETO</a>
-                                    <a href="https://github.com/adryanszencz/Projetos/tree/main/projeto02" class="text-white border border-0 border-bottom text-decoration-none pt-2">VER CÓDIGO</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <hr>
                 <div class="mt-5 pb-5">
-                    <h1 class="text-start display-3">Formações</h1>
+                    <h1 class="text-start display-4">Formações</h1>
                     <div class="row mt-5">
                         <div class="col-sm me-5">
                             <div class="flex-column">
